--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,11 @@ uvicorn
 requests
 python-dotenv
 pytz
+google
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+PyPDF2
+python-docx
+python-dotenv
